feat: adiciona requisições para rotas do backend

--- a/project.css
+++ b/project.css
@@ -69,14 +69,14 @@ header>:nth-child(1){
 }
 
 #lampada{
-    background-image: url('lampada-incandescente.png');
+    background-image: url('assets/lampada-incandescente.png');
 }
 
 #sino{
-    background-image: url('notificacao.png');
+    background-image: url('assets/notificacao.png');
 }
 #menu{
-    background-image: url('menu-aberto.png');
+    background-image: url('assets/menu-aberto.png');
 }
 
 .icones{
