--- a/perfil.css
+++ b/perfil.css
@@ -46,14 +46,14 @@ header {
     font-size: 14px;
 }
 #lampada{
-    background-image: url('lampada-incandescente\ \(1\).png');
+    background-image: url('assets/lampada-incandescente\ \(1\).png');
 }
 
 #sino{
-    background-image: url('notificacao\ \(1\).png');
+    background-image: url('assets/notificacao\ \(1\).png');
 }
 #menu{
-    background-image: url('menu-aberto\ \(1\).png');
+    background-image: url('assets/menu-aberto\ \(1\).png');
 }
 
 
