--- a/pages/login/login.css
+++ b/pages/login/login.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-image: url(assets/BackgroundLogin.png);
+    background-image: url(../../assets/BackgroundLogin.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
