--- a/pages/perfil/perfil.css
+++ b/pages/perfil/perfil.css
@@ -46,14 +46,14 @@ header {
     font-size: 14px;
 }
 #lampada{
-    background-image: url('../../assets/lampada-incandescente\ \(1\).png');
+    background-image: url('../../src/images/lampada-incandescente\ \(1\).png');
 }
 
 #sino{
-    background-image: url('../../assets/notificacao\ \(1\).png');
+    background-image: url('../../src/images/notificacao\ \(1\).png');
 }
 #menu{
-    background-image: url('../../assets/menu-aberto\ \(1\).png');
+    background-image: url('../../src/images/menu-aberto\ \(1\).png');
 }
 
 
