--- a/pages/project/project.css
+++ b/pages/project/project.css
@@ -69,14 +69,14 @@ header>:nth-child(1){
 }
 
 #lampada{
-    background-image: url('../../assets/lampada-incandescente.png');
+    background-image: url('../../src/images/lampada-incandescente.png');
 }
 
 #sino{
-    background-image: url('../../assets/notificacao.png');
+    background-image: url('../../src/images/notificacao.png');
 }
 #menu{
-    background-image: url('../../assets/menu-aberto.png');
+    background-image: url('../../src/images/menu-aberto.png');
 }
 
 .icones{
