--- a/pages/project-chat/project-chat.css
+++ b/pages/project-chat/project-chat.css
@@ -6,8 +6,8 @@ header{
     height: 12vh;
     display: grid;
     grid-template: 12vh / 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-
+    background: #fff;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 
 #logo{
