--- a/pages/projects-gallery/projects-gallery.css
+++ b/pages/projects-gallery/projects-gallery.css
@@ -9,8 +9,8 @@ header{
     height: 12vh;
     display: grid;
     grid-template: 12vh / 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-
+    background: #fff;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 
 #logo{
@@ -286,14 +286,18 @@ main{
 #projeto-logo{
      display: flex;
      align-items: center;
-     justify-content: center;
+     justify-content: flex-end;
+     width: 12vh;
+     height: 12vh;
+     margin-left: 40px;
 }
 
 #projeto-logo>img{
-    height: 12vh;
-    width: 12vh;
-    border-radius: 100%;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
     border: #2A3B41 3px solid;
+    object-fit: cover;
 }
 
 #project-open{
