--- a/pages/perfil/perfil.css
+++ b/pages/perfil/perfil.css
@@ -8,6 +8,9 @@ body {
     font-family: "Gudea", sans-serif;
     background: #f5f7fb;
     color: #222;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 a {
@@ -15,6 +18,9 @@ a {
     color: inherit;
 }
 
+main {
+    flex: 1;
+}
 
 header {
     height: 12vh;
@@ -227,15 +233,13 @@ header > :nth-child(1) {
     color: gold;
 }
 
-footer{
-    position: fixed;
-    bottom: 0;
-    left: 0;
+footer {
     width: 100%;
     height: 15vh;
     background-color: #2A3B41;
     display: grid;
     grid-template: 15vh / 2fr 1fr 1fr 3fr 1fr;
+    margin-top: auto;
 }
 
 footer>div>a{
