--- a/pages/perfil/perfil.css
+++ b/pages/perfil/perfil.css
@@ -103,7 +103,8 @@ header > :nth-child(1) {
     justify-content: right;
     align-items: center;
 
-    gap: 2vh;}
+    gap: 2vh;
+    padding-right: 2vh;}
 
 .icones > a,
 .icones > button {
